--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -1,46 +1,3 @@
-/**
- * CSSReset.com - How To Keep Footer At Bottom of Page with CSS
- *
- * Original Tutorial: http://www.cssreset.com/2010/css-tutorials/how-to-keep-footer-at-bottom-of-page-with-css/
- * License: Free - do whatever you like with it! Credit and linkbacks much appreciated.
- *
- * NB: Make sure the value for 'padding-bottom' on #content is equal to or greater than the height of #footer.
- */
-html,
-body {
-	margin:0;
-	padding:0;
-	height:100%;
-}
-#wrapper {
-	min-height:100%;
-	position:relative;
-}
-#header {
-	background:#ededed;
-	padding:10px;
-}
-#content {
-	padding-bottom:100px; /* Height of the footer element */
-}
-#footer {
-	background:#ffab62;
-	width:100%;
-	height:100px;
-	position:absolute;
-	bottom:0;
-	left:0;
-}
-
-/*Start of stylesheet*/
-
-/*================================
-Google fonts used:
-font-family: 'Oswald', sans-serif;
-font-family: 'Ubuntu', sans-serif;
-font-family: 'Lobster', cursive;
- @import url(https://fonts.googleapis.com/css?family=Oswald|Ubuntu|Lobster);
-=================================*/
 @import url(https://fonts.googleapis.com/css?family=Oswald|Ubuntu|Lobster);
 
 body{
@@ -54,3 +11,20 @@ h2{
     font-family: 'Ubuntu', sans-serif;
 }
 
+/*Loading screen*/
+#loader-wrapper{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+#loader-left {
+    width: 50%;
+    height: 100%;
+}
+
+#loader-right {
+    height: 100%;
+    width: 50%;
+}
