--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -11,20 +11,56 @@ h2{
     font-family: 'Ubuntu', sans-serif;
 }
 
-/*Loading screen*/
-#loader-wrapper{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-#loader-left {
-    width: 50%;
-    height: 100%;
-}
+/*Animation*/
 
-#loader-right {
-    height: 100%;
-    width: 50%;
+#flip {
+    height: 100vh;
+    width: 100vw;
+    z-index: 100;
+    display: inline-block;
+    position: absolute;
+}
+#flip-right-side{
+    width: 100%;
+    height: 50%;
+    background-color: #5E5C5C;
+    animation-name: flip-right;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+#flip-left-side{
+    width: 100%;
+    height: 50%;
+    background-color: #9C9898;
+    animation-name: flip-left;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+@keyframes flip-left{
+    from{
+        transform: rotateX(0);
+        opacity: 1;
+    }
+    to{
+        transform-origin: center;
+        transform-style: flat;
+        transform: rotateY(180deg);
+        background-color: #000000;
+        opacity: 0;
+        z-index: -1;
+    }
+}
+@keyframes flip-right{
+    from{
+        transform: rotateX(0);
+        opacity: 1;
+    }
+    to{
+        transform-origin: center;
+        transform-style: flat;
+        transform: rotateY(-180deg);
+        background-color: #ffffff;
+        opacity: 0;
+        z-index: -1;
+    }
 }
