--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -17,15 +17,15 @@ h2{
     height: 100vh;
     width: 100vw;
     z-index: 100;
-    display: inline-block;
     position: absolute;
+    animation: remove 10s forwards;
 }
 #flip-right-side{
     width: 100%;
     height: 50%;
     background-color: #5E5C5C;
     animation-name: flip-right;
-    animation-duration: 5s;
+    animation-duration: 10s;
     animation-fill-mode: forwards;
 }
 #flip-left-side{
@@ -33,34 +33,52 @@ h2{
     height: 50%;
     background-color: #9C9898;
     animation-name: flip-left;
-    animation-duration: 5s;
+    animation-duration: 8s;
     animation-fill-mode: forwards;
 }
 @keyframes flip-left{
-    from{
+    0%{
         transform: rotateX(0);
         opacity: 1;
     }
-    to{
+    75%{
         transform-origin: center;
         transform-style: flat;
         transform: rotateY(180deg);
         background-color: #000000;
-        opacity: 0;
-        z-index: -1;
+    }
+    100%{
+        transform: translateX(100%);
+        transform: translateY(-100%);
+
     }
 }
 @keyframes flip-right{
-    from{
+    0%{
         transform: rotateX(0);
         opacity: 1;
     }
-    to{
+    75%{
         transform-origin: center;
         transform-style: flat;
         transform: rotateY(-180deg);
         background-color: #ffffff;
-        opacity: 0;
-        z-index: -1;
     }
+    100%{
+        transform: translateX(-100%);
+    }
+}
+@keyframes remove{
+    from{
+        background-color: gray;
+    }
+    to{
+        transform: translateY(-100%);
+
+    }
+}
+/*Body content*/
+#content{
+    position: absolute;
+    z-index: 200;
 }
