Added javascript and animate files

--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -60,4 +60,13 @@ body{
 }
 
 /*Folio*/
-#folio
+#folio{
+
+}
+/*Contact*/
+#contact{
+    background-color: #999;
+    opacity: 0.5;
+    color: #000;
+    fon
+}
