--- a/Assets/Stylesheets/foundation.css
+++ b/Assets/Stylesheets/foundation.css
@@ -23,7 +23,8 @@ html {
    * Remove default margin.
    */
 body {
-  margin: 0; }
+  margin: 0;
+}
 
 /* HTML5 display definitions
      ========================================================================== */
@@ -431,9 +432,7 @@ button {
   .row.collapse > .column, .row.collapse > .columns {
     padding-left: 0;
     padding-right: 0; }
-  .row .row {
-    margin-left: -0.9375rem;
-    margin-right: -0.9375rem; }
+
     .row .row.collapse {
       margin-left: 0;
       margin-right: 0; }
