--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -18,8 +18,10 @@ h6 {
 body {
     background-image: url(../Images/straightroad.jpg);
     width: 100%;
+    height: 100%;
     padding: 0;
     background-attachment: fixed;
+    background-repeat: no-repeat;
 }
 
 /*Home*/
@@ -64,7 +66,6 @@ body {
     background-color: #fff;
     padding: 1%;
     top: 0;
-    height: 50vh;
 }
 #myName {
     display: inline-block;
@@ -73,18 +74,22 @@ body {
 #scrollbar {
     z-index: 1000;
 }
+li {
+    list-style-type: none;
+}
 
 /*Folio*/
 
 #folio {
-    height: 100vh;
     background-color: #000;
-    opacity: 0.7;
+    opacity: 0.85;
     color: #fff;
+    padding: 2%;
 }
 #folio img {
     width: 18%;
     height: auto;
+    padding: 1%;
 }
 
 /*Contact*/
@@ -94,6 +99,11 @@ body {
     background-size: 100vw 50vh;
     background-repeat: no-repeat;
     overflow: hidden;
-    height: 50vh;
     color: #fff;
+    padding: 1%;
+}
+#social img {
+    width: 40px;
+    height: auto;
+    background-color: #999;
 }
