--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -96,14 +96,18 @@ li {
 
 #contact {
     background-image: url(../Images/telephone.jpg);
-    background-size: 100vw 50vh;
+    background-size: 100vw 100%;
     background-repeat: no-repeat;
     overflow: hidden;
-    color: #fff;
-    padding: 1%;
+    color: #000;
+}
+#contact-bg {
+    background-color: #999;
+    opacity: 0.7;
 }
 #social img {
     width: 40px;
     height: auto;
     background-color: #999;
+    margin: 0 20px;
 }
