--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -100,10 +100,13 @@ li {
     background-repeat: no-repeat;
     overflow: hidden;
     color: #000;
+    height: 300px;
 }
 #contact-bg {
-    background-color: #999;
+    background-color: #444;
     opacity: 0.7;
+    width: 100vw;
+    height: 300px;
 }
 #social img {
     width: 40px;
