--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -22,6 +22,10 @@ body {
     padding: 0;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    font-size: 1.2em;
+}
+body p {
+    font-size: 25px;
 }
 
 /*Home*/
