--- a/Assets/Stylesheets/main.css
+++ b/Assets/Stylesheets/main.css
@@ -3,7 +3,7 @@ body {
     font-family: 'Ubuntu', sans-serif;
 }
 h1 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Lobster', 'Ubuntu', cursive;
 }
 h2,
 h3,
